--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,5 +1,5 @@
-$base-color: #ff0000;
-$color: rgba(black, 0.88);
+$base-color: #faf6f6;
+$color: rgba(rgb(2, 60, 250), 0.88);
 
 body {
 	background-color: $base-color;
