--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,7 +1,13 @@
-$base-color: #faf6f6;
-$color: rgba(rgb(2, 60, 250), 0.88);
-
-body {
-	background-color: $base-color;
-	color: $color;
-}
+.bg-image-vertical {
+    position: relative;
+    overflow: hidden;
+    background-repeat: no-repeat;
+    background-position: right center;
+    background-size: auto 100%;
+  }
+  
+  @media (min-width: 1025px) {
+    .h-custom-2 {
+      height: 100%;
+    }
+  }
