--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -2,16 +2,26 @@ body {
     margin: 0;
     font-family: 'Quicksand', sans-serif;
     background-color: #ffdd90;
-    background-image: url("cultivo.jpg");
-    background-size: cover;
+    /* background-image: url("cultivo.jpg");
+    background-size: cover; */
+}
+img{
+    height: auto;
+    left: 50%;
+    top: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    min-height: 100%;
+    min-width: 100%;
+    position: fixed;
+    width: auto;
 }
 #contenedor{
     align-items: center;
-    width: 450px;
+    width: 550px;
     margin: 0 auto;
     overflow: hidden;
     position: absolute;
-    background-color: #F1EDED;
+    background-color: #ffffffd9;
     top: 300px;
     right: 60px;
     padding: 30px 50px;
@@ -24,22 +34,24 @@ h1{
     height: 80px;
     margin-bottom: 10px;
     margin-top: 5px;
+    font-size: 40px;
 }
 .filas{
     list-style: none;
 }
 #usuario{
-    margin-left: 1.458px;
-    width: 58.5%;
+    margin-left: 5px;
+    width: 65%;
 }
 .user{
-    margin-left: 26px;
+    margin-left: 22px;
 }
 #password{
-    width: 58.5%;
+    margin-left: 4.5px;
+    width: 65%;
 }
-form{
-    margin: 0;
+.login-form{
+    margin-left: 0.5px;
     padding: 0;
     align-items: center;
 }
@@ -51,7 +63,7 @@ a{
     margin-left: 25px;
 }
 .ingresar{
-    box-shadow: 0 0 0 2px #000 inset;
+    box-shadow: 0 0 0 0.5px #000 inset;
     color: #000;
     width: 144px;
     margin-top: 10px !important;
@@ -59,8 +71,40 @@ a{
     padding: 10px 20px;
     cursor: pointer;
     background-color: transparent;
-    margin-left: 120px;
+    margin-left: 130px;
 }
-.titulo{
-    font-size: 30px;
+
+@media (max-width: 1124px){
+    img{
+        display: none;
+    }
+    .contenedor{
+        width: 100%;
+        position: unset;
+    }
+    #contenedor{
+        left: 25px;
+        right: 50px;
+        background-color: #F1EDED;
+    }
+    body{
+        background-color:white;
+    }
+}
+@media (max-width: 820px){
+    img{
+        display: none;
+    }
+    .contenedor{
+        width: 100%;
+        position: unset;
+    }
+    #contenedor{
+        left: 5px;
+        right: 50px;
+        background-color: #F1EDED;
+    }
+    body{
+        background-color:white;
+    }
 }
