--- a/src/styles/Login.scss
+++ b/src/styles/Login.scss
@@ -1,10 +1,5 @@
-body {
-    margin: 0;
-    font-family: 'Quicksand', sans-serif;
-    
-    /* background-image: url("cultivo.jpg");
-    background-size: cover; */
-}
+@import 'vars';
+
 img{
     height: auto;
     left: 50%;
