--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,11 +1,4 @@
-body {
-    margin: 0;
-    font-family: 'Quicksand', sans-serif;
-    background-color: #ffdd90;
-    /* background-image: url("cultivo.jpg");
-    background-size: cover; */
-}
-img{
+.fondo{
     height: auto;
     left: 50%;
     top: 50%;
@@ -15,7 +8,7 @@ img{
     position: fixed;
     width: auto;
 }
-#contenedor{
+.loginContenedor{
     align-items: center;
     width: 550px;
     margin: 0 auto;
@@ -29,7 +22,7 @@ img{
     z-index: 10000;
     border-radius: 15px;
 }
-h1{
+.h1{
     text-align: center;
     height: 80px;
     margin-bottom: 10px;
@@ -39,14 +32,14 @@ h1{
 .filas{
     list-style: none;
 }
-#usuario{
-    margin-left: 5px;
+.usuario{
+    margin-left: 10px;
     width: 65%;
 }
 .user{
     margin-left: 22px;
 }
-#password{
+.password{
     margin-left: 4.5px;
     width: 65%;
 }
@@ -59,8 +52,9 @@ h1{
     text-align: center;
     width: 100%;
 }
-a{
+.olvido{
     margin-left: 25px;
+    text-decoration: none;
 }
 .ingresar{
     box-shadow: 0 0 0 0.5px #000 inset;
@@ -71,7 +65,7 @@ a{
     padding: 10px 20px;
     cursor: pointer;
     background-color: transparent;
-    margin-left: 130px;
+    margin-left: 175px;
 }
 
 @media (max-width: 1124px){
@@ -82,7 +76,7 @@ a{
         width: 100%;
         position: unset;
     }
-    #contenedor{
+    .loginContenedor{
         left: 25px;
         right: 50px;
         background-color: #F1EDED;
@@ -99,7 +93,7 @@ a{
         width: 100%;
         position: unset;
     }
-    #contenedor{
+    .loginContenedor{
         left: 5px;
         right: 50px;
         background-color: #F1EDED;
