--- a/src/styles/AsignacionUsuario.scss
+++ b/src/styles/AsignacionUsuario.scss
@@ -1,1 +1,60 @@
 @import 'vars';
+
+.cuerpoAsign {
+    padding-top: 100px;
+    font-family: 'Quicksand', sans-serif;
+}
+.tituloAsign{
+    text-align: center;
+    height: 75px;
+    margin-bottom: 10px;
+    margin-top: 5px;
+    font-size: 75px;
+}
+.asignacion{
+    padding-top: 200px;
+    width: 100%;
+    height: 100hv;
+    display: grid;
+    place-items: center;
+}
+.asignacion-form{
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+    width: 500px;
+}
+.form{
+    display: flex;
+    flex-direction: column;
+}
+.label{
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+.input{
+    background-color: #f7f7f7;
+    border: none;
+    border-radius: 8px;
+    height: 30px;
+    font-size: 18px;
+    padding: 6px;
+    width: 90%;
+    margin-bottom: 30px;
+}
+.asignar{
+    background-color: lightgray;
+    color: #000;
+    width: 50%;
+    border-radius: 10px;
+    padding: 10px 20px;
+    font-size: 18px;
+    font-weight: bold;
+    cursor: pointer;
+    align-self: center;
+    margin-right: 35px;
+}
+.icon{
+    cursor: pointer;
+    height: 18px;
+}
