--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -15,7 +15,7 @@ nav {
 }
 .nombre{
     margin-left: 12px;
-    width: 200px;
+    width: 200%;
     text-align: center;
     margin-top: 28px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
