--- a/src/styles/production/FormRegisterLand.scss
+++ b/src/styles/production/FormRegisterLand.scss
@@ -1,28 +1,23 @@
-@import 'vars';
+@import '../vars';
 
-.resetPassword-contenedor {
+
+.userRegister-contenedor {
     padding-top: 20px;
 }
-.resetPassword-titulo{
+.userRegister-titulo{
     text-align: center;
     height: 75px;
     margin-bottom: 10px;
     margin-top: 5px;
     font-size: 50px;
 }
-.resetPassword-subtitulo{
-    text-align: center;
-    margin-bottom: 5px;
-    margin-top: 10px;
-    font-size: 20px;
-}
-.resetPassword{
+.predioRegister{
     display: flex;
     margin-top: 50px;
     height: auto;
     justify-content: center;
 }
-.resetPassword-form{
+.predioRegister-form{
     width: 700px;
     margin: 0 auto;
     overflow: hidden;
@@ -31,16 +26,16 @@
     padding: 30px 50px;
     height: auto;
 }
-.resetPassword-button{
+.predioRegister-button{
     background: #77DD77;
     color: white;
     width: 100px;
 }
-.resetPassword-button:hover{
+.predioRegister-button:hover{
     background: #5DC460;
 }
 @media (max-width: 730px) {
-    .resetPassword-form {
+    .predioRegister-form {
         width: auto;
     }
 }
