--- a/src/styles/user/EditUser.scss
+++ b/src/styles/user/EditUser.scss
@@ -1,23 +1,22 @@
-@import 'vars';
+@import '../vars';
 
-
-.userRegister-contenedor {
+.userEdit-contenedor {
     padding-top: 20px;
 }
-.userRegister-titulo{
+.userEdit-titulo{
     text-align: center;
     height: 75px;
     margin-bottom: 10px;
     margin-top: 5px;
     font-size: 50px;
 }
-.predioRegister{
+.userEdit{
     display: flex;
     margin-top: 50px;
     height: auto;
     justify-content: center;
 }
-.predioRegister-form{
+.userEdit-form{
     width: 700px;
     margin: 0 auto;
     overflow: hidden;
@@ -26,16 +25,16 @@
     padding: 30px 50px;
     height: auto;
 }
-.predioRegister-button{
+.userEdit-button{
     background: #77DD77;
     color: white;
     width: 100px;
 }
-.predioRegister-button:hover{
+.userEdit-button:hover{
     background: #5DC460;
 }
 @media (max-width: 730px) {
-    .predioRegister-form {
+    .userEdit-form {
         width: auto;
     }
 }
