--- a/src/styles/user/Reset.scss
+++ b/src/styles/user/Reset.scss
@@ -1,22 +1,28 @@
-@import 'vars';
+@import '../vars';
 
-.userEdit-contenedor {
+.resetPassword-contenedor {
     padding-top: 20px;
 }
-.userEdit-titulo{
+.resetPassword-titulo{
     text-align: center;
     height: 75px;
     margin-bottom: 10px;
     margin-top: 5px;
     font-size: 50px;
 }
-.userEdit{
+.resetPassword-subtitulo{
+    text-align: center;
+    margin-bottom: 5px;
+    margin-top: 10px;
+    font-size: 20px;
+}
+.resetPassword{
     display: flex;
     margin-top: 50px;
     height: auto;
     justify-content: center;
 }
-.userEdit-form{
+.resetPassword-form{
     width: 700px;
     margin: 0 auto;
     overflow: hidden;
@@ -25,16 +31,16 @@
     padding: 30px 50px;
     height: auto;
 }
-.userEdit-button{
+.resetPassword-button{
     background: #77DD77;
     color: white;
     width: 100px;
 }
-.userEdit-button:hover{
+.resetPassword-button:hover{
     background: #5DC460;
 }
 @media (max-width: 730px) {
-    .userEdit-form {
+    .resetPassword-form {
         width: auto;
     }
 }
