Correcciones hasta el momento

--- a/src/styles/components/Header.scss
+++ b/src/styles/components/Header.scss
@@ -1,37 +1,42 @@
 @import '../vars';
-
-body {
+  
+  * {
     margin: 0;
-    font-family: 'Quicksand', sans-serif;
-}
-nav {
+    padding: 0;
+    box-sizing: border-box;
+  }
+  
+  nav {
+    background: var(--verde);
+    font-family:  "Bebas Neue", sans-serif;
+  }
+  
+  .contenedor {
+    width: 90%;
+    margin: auto;
+  }
+  
+  .contenedor {
     display: flex;
     justify-content: space-between;
-    padding: 0 24px;
-    border-bottom: 1px solid lightgreen;
-}
-.barnav-izq{
-    display: flex;
-}
-.nombre{
-    margin-left: 12px;
-    width: 200%;
-    text-align: center;
-    margin-top: 28px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 25px;
-}
-.barnav-der ul{
-    list-style-type: none;
-    padding: 0;
-    margin: 10px;
-    display: flex;
     align-items: center;
-    height: 60px;
-}
-.barnav-der{
-    display: flex;
-}
-.rol{
-    margin-right: 12px;
-}
+  }
+  
+  .logotipo {
+    font-family: "Bebas Neue", sans-serif;
+    font-weight: normal;
+    color: var(--white);
+    font-size: 30px;
+    text-decoration: none;
+  }
+  
+   nav .contenedor a {
+    color: #f6f9fa;
+    text-decoration: none;
+    margin-right: 20px;
+  }
+  
+  nav .contenedor a:hover,
+  nav .contenedor a.activo {
+    color: #f6f9fa;
+  }
