--- a/src/styles/user/RegisterUser.scss
+++ b/src/styles/user/RegisterUser.scss
@@ -21,13 +21,13 @@
     margin: 0 auto;
     overflow: hidden;
     position: absolute;
-    background-color: #F1EDED;
+    background-color: (--white);
     padding: 30px 50px;
     height: auto;
 }
 .userRegister-button{
     background: #77DD77;
-    color: white;
+    color: (--black);
     width: 100px;
 }
 .userRegister-button:hover{
