--- a/src/styles/dashboard/dashboard.scss
+++ b/src/styles/dashboard/dashboard.scss
@@ -1,107 +1,40 @@
 @import '../vars';
 
-.tituloPrin{
+main {
+    width: 100%;
+    height: 600px;
+    background: #6a996e;
+    background: -webkit-linear-gradient(to right, hsla(133, 77%, 38%, 0.459), hsla(140, 21%, 49%, 0.664)), url(../img/portada.jpg);
+    background: linear-gradient(to right, hsla(133, 77%, 38%, 0.459), hsla(140, 21%, 49%, 0.664)), url(../img/portada.jpg);
+    background-size: cover;
+    background-attachment: fixed;
+    position: relative;
+}
+
+
+main .textos-main{
+    display: flex;
+    height: 430px;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
     text-align: center;
-    height: 75px;
-    margin-bottom: 10px;
-    margin-top: 5px;
-    font-size: 75px;
 }
-.menu ul{
-    list-style: none;
-    display: flex;
-    align-items: center;
-    height: 150px;
-    display: flex;
-    padding-left: 250px;
-    padding-right: 250px;
-    justify-content: space-between;
+
+.textos-main h1{
+    font-size: 50px;
+    color:#fff;
 }
-.worldicon{
-    margin-left: 12px;
+
+.textos-main h2{
+    font-size: 30px;
+    font-weight: 300;
+    color:#fff;
 }
-.usericon{
-    margin-left: 15px;
-}
-.listaMenu{
-    padding-top: 250px;
-    padding-bottom: 250px;
-    align-items: center;
-}
-#items{
-    padding-left: 12px;
-}
-#item3{
-    padding-left: 18%;
-}
-@media(max-width: 1315px) {
-    .menu ul{
-        list-style: none;
-        display: flex;
-        align-items: center;
-        height: 150px;
-        display: flex;
-        padding-left: 100px;
-        padding-right: 100px;
-        justify-content: space-between;
-    }
-}
-@media(max-width: 1020px) {
-    .menu ul{
-        list-style: none;
-        display: flex;
-        align-items: center;
-        height: 150px;
-        display: flex;
-        padding-left: 0px;
-        padding-right: 10px;
-        justify-content: space-between;
-    }
-}
-@media(min-width: 826px) {
-    .contenedorlista{
-        width: 250px;
-        align-items: center;
-        /* margin-left: 25px; */
-        overflow: hidden;
-        background-color: #CBC9C9;
-        padding: 30px 50px;
-        height: 200px;
-        place-content: center;
-        border-radius: 10%;
-    }
-}
-@media(max-width: 825px) {
-    .menu ul{
-        list-style: none;
-        display: flex;
-        align-items: center;
-        height: 150px;
-        display: flex;
-        padding-left: 50px;
-        padding-right: 50px;
-        justify-content: space-between;
-    }
-    #item3{
-        padding-left: 0px;
-    }
-}
-@media(max-width: 570px) {
-    .menu ul{
-        list-style: none;
-        display: flex;
-        align-items: center;
-        height: 150px;
-        display: flex;
-        padding-left: 0px;
-        padding-right: 0px;
-        justify-content: space-between;
-    }
-    .tituloprin{
-        text-align: center;
-        height: 75px;
-        margin-bottom: 10px;
-        margin-top: 5px;
-        font-size: 50px;
-    }
+
+.wave{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
 }
