--- a/src/styles/dashboard/dashboard.scss
+++ b/src/styles/dashboard/dashboard.scss
@@ -1,40 +1,40 @@
 @import '../vars';
 
-main {
-    width: 100%;
-    height: 600px;
-    background: #6a996e;
-    background: -webkit-linear-gradient(to right, hsla(133, 77%, 38%, 0.459), hsla(140, 21%, 49%, 0.664)), url(../img/portada.jpg);
-    background: linear-gradient(to right, hsla(133, 77%, 38%, 0.459), hsla(140, 21%, 49%, 0.664)), url(../img/portada.jpg);
-    background-size: cover;
-    background-attachment: fixed;
-    position: relative;
+.sobre-nosotros{
+    padding: 30px 0 60px 0;
 }
-
-
-main .textos-main{
+.contenedor-sobre-nosotros{
     display: flex;
-    height: 430px;
-    width: 100%;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+.imagen-about-us{
+    width: 48%;
+}
+
+.sobre-nosotros .contenido-textos{
+    width: 48%;
+}
+
+.contenido-textos h3{
+    margin-bottom: 15px;
+}
+
+.contenido-textos h3 span{
+    background: #02550d;
+    color: #fff;
+    border-radius: 50%;
+    display: inline-block;
     text-align: center;
+    width: 30px;
+    height: 30px;
+    padding: 2px;
+    box-shadow: 0 0 6px 0 rgba(0, 0, 0, .5);
+    margin-right: 5px;
 }
 
-.textos-main h1{
-    font-size: 50px;
-    color:#fff;
-}
-
-.textos-main h2{
-    font-size: 30px;
+.contenido-textos p{
+    padding: 0px 0px 30px 15px;
     font-weight: 300;
-    color:#fff;
-}
-
-.wave{
-    position: absolute;
-    bottom: 0;
-    width: 100%;
+    text-align: justify;
 }
